fix: visual alignments (#1894)
* fix: radii

* fix: overflowing focus outline

* fix: remove bottom extra spacing

* fix: revert hidden overflow

* fix: avoid clipping outline

---------

--- a/packages/components/src/components/menu-flyout-item/menu-flyout-item.css
+++ b/packages/components/src/components/menu-flyout-item/menu-flyout-item.css
@@ -62,6 +62,7 @@
 
 :host(:focus) .menu-flyout-item {
   outline: var(--focus-outline);
+  border-radius: var(--telekom-radius-small);
 }
 
 :host(:active) .menu-flyout-item:not(.menu-flyout-item--disabled) {
